Simplify the implemnetation of FhirViewTest by reading test resources directly from memory.