@@ -5,6 +5,8 @@ import static au.csiro.pathling.UnitTestDependencies.jsonParser;
 import static au.csiro.pathling.test.assertions.Assertions.assertThat;
 import static au.csiro.pathling.validation.ValidationUtils.ensureValid;
 import static java.util.Objects.nonNull;
+import static java.util.stream.Collectors.mapping;
+import static java.util.stream.Collectors.toList;
 import static org.apache.spark.sql.functions.callUDF;
 import static org.apache.spark.sql.functions.col;
 import static org.apache.spark.sql.functions.lit;
@@ -20,7 +22,6 @@ import au.csiro.pathling.encoders.datatypes.DecimalCustomCoder;
 import au.csiro.pathling.io.source.DataSource;
 import au.csiro.pathling.sql.boundary.LowBoundaryForDateTimeFunction;
 import au.csiro.pathling.sql.boundary.LowBoundaryForTimeFunction;
-import au.csiro.pathling.terminology.TerminologyServiceFactory;
 import au.csiro.pathling.test.SpringBootUnitTest;
 import au.csiro.pathling.utilities.Streams;
 import ca.uhn.fhir.context.FhirContext;
@@ -69,7 +70,6 @@ import org.junit.jupiter.api.TestInstance.Lifecycle;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.support.PathMatchingResourcePatternResolver;
 import org.springframework.core.io.support.ResourcePatternResolver;
@@ -92,7 +92,7 @@ abstract class FhirViewTest {
 
   @Autowired
   Gson gson;
-  
+
   @Nonnull
   private final String testLocationGlob;
 
@@ -183,7 +183,7 @@ abstract class FhirViewTest {
               return col(field.name());
             }
           })
-          .collect(Collectors.toList());
+          .collect(toList());
 
       // Select the data with the dynamically created column expressions.
       final Dataset<Row> selectedExpectedResult = expectedResult.select(
@@ -275,37 +275,26 @@ abstract class FhirViewTest {
   }
 
   DataSource getDataSource(@Nonnull final JsonNode testDefinition) {
-    try {
-      // Create a parent directory based upon the test name.
-      final JsonNode resources = testDefinition.get("resources");
-      final Path directory = getTempDir(testDefinition);
-      final TestDataSource result = new TestDataSource();
+    // Create a parent directory based upon the test name.
+    final JsonNode resources = testDefinition.get("resources");
+    final TestDataSource result = new TestDataSource();
 
-      for (final Iterator<JsonNode> it = resources.elements(); it.hasNext(); ) {
-        final JsonNode resource = it.next();
-
-        // Append each resource to a file named after its type.
-        final String resourceType = resource.get("resourceType").asText();
-        final Path ndjsonPath = directory.resolve(resourceType + ".ndjson");
-        Files.write(ndjsonPath,
-            (resource + "\n").getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE,
-            StandardOpenOption.APPEND);
-
-        // Read the NDJSON file into a Spark dataset and add it to the data source.
-        final Dataset<String> jsonStrings = spark.read().text(ndjsonPath.toString())
-            .as(Encoders.STRING());
-        final ExpressionEncoder<IBaseResource> encoder = fhirEncoders.of(resourceType);
-        final Dataset<Row> dataset = jsonStrings.map(
-            (MapFunction<String, IBaseResource>) (json) -> jsonParser(fhirContext())
-                .parseResource(json), encoder).toDF().cache();
-        result.put(ResourceType.fromCode(resourceType), dataset);
-      }
-
-      return result;
-
-    } catch (final IOException e) {
-      throw new RuntimeException(e);
-    }
+    // For each resource type, create a dataset and add it to the result.
+    Streams.streamOf(resources.elements())
+        // groupBy resource type and convert the value using toString()
+        .collect(Collectors.groupingBy(
+            resource -> resource.get("resourceType").asText(),
+            mapping(Object::toString, toList()
+            ))
+        ).forEach((resourceType, jsonStrings) -> {
+          final Dataset<String> dataset = spark.createDataset(jsonStrings, Encoders.STRING());
+          final ExpressionEncoder<IBaseResource> encoder = fhirEncoders.of(resourceType);
+          final Dataset<Row> resourceDataset = dataset.map(
+              (MapFunction<String, IBaseResource>) (json) -> jsonParser(fhirContext())
+                  .parseResource(json), encoder).toDF().cache();
+          result.put(ResourceType.fromCode(resourceType), resourceDataset);
+        });
+    return result;
   }
 
   List<TestParameters> toTestParameters(@Nonnull final JsonNode testDefinition,
@@ -324,7 +313,7 @@ abstract class FhirViewTest {
             .orElse(Stream.empty())
             .map(JsonNode::asText)
             .toList();
-        
+
         if (includeTags.isEmpty() || !Collections.disjoint(tags, includeTags)) {
           // Get the view JSON.
           final String viewJson = view.get("view").toPrettyString();
@@ -396,7 +385,7 @@ abstract class FhirViewTest {
         expectedColumns = columns;
       }
       // Append the row to the file.
-      Files.write(expectedPath, (row + "\n").getBytes(StandardCharsets.UTF_8),
+      Files.writeString(expectedPath, row + "\n",
           StandardOpenOption.APPEND);
     }
     return new Expect(expectedPath, expectedColumns != null
